--- a/style.css
+++ b/style.css
@@ -1,317 +1,154 @@
-
-  a {
+a {
     color: rgb(255, 255, 255);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-decoration-thickness: 54%;
     font-size: 100%;
-  }
-  
-  img {
-  
+}
+
+img {
     padding: px;
     border-radius: 25px;
-    
-  }
-  
-  
-  .rectangle {
+}
 
-    padding:4px;
+.rectangle {
+    padding: 4px;
     border-radius: 7px;
-    background-color:#55067c;
+    background-color: #add8e6;
     width: fit-content;
     transition: 0.75s;
-    
-    
+}
 
-  }
-
-  .horizontalspacer {
+.horizontalspacer {
     height: 0px;
     width: 0px;
+}
 
-  }
-
-
-
-  
-  
-
-  
-  
-  .rndrec {
-  
-  border-radius: 25px;
-  background-color: #55067c;
-  padding: 15px;
-  width: 200px;
-  height: 210px;
-  display: grid;
-  transition: 0.75s;
-  margin: 10px;
-  display: inline-block;
-
-  
-  
-  }
-  .more {
-  
+.rndrec {
     border-radius: 25px;
-    background-color: #55067c;
+    background-color: #add8e6;
+    padding: 15px;
+    width: 200px;
+    height: 210px;
+    display: grid;
+    transition: 0.75s;
+    margin: 10px;
+    display: inline-block;
+}
+
+.more {
+    border-radius: 25px;
+    background-color: #add8e6;
     padding: 15px;
     width: 100px;
     height: 20px;
     display: grid;
     transition: 0.75s;
     margin: 10px;
-    
-    
-    }
-    .search-input {
-  
-      border-radius: 25px;
-      background-color: #55067c;
-      padding: 15px;
-      width: 500px;
-      height: 20px;
-      display: grid;
-      transition: 0.75s;
-      color: white;
-      
-      
-      
-      
-      }  
-      .search-button {
-  
-        border-radius: 25px;
-        background-color: #55067c;
-        padding: 15px;
-        width: 100px;
-        height: 50px;
-        display: grid;
-        transition: 0.75s;
-        margin: 10px;
-        color: white;
-        
-        
-        
-        
-        }  
-    .search-container {
-          display: flex;
-          align-items: center;
+}
 
-
-    }
-
-    .search{
+.search-input {
     border-radius: 25px;
-    background-color: #55067c;
+    background-color: #add8e6;
+    padding: 15px;
+    width: 500px;
+    height: 20px;
+    display: grid;
+    transition: 0.75s;
+    color: white;
+}
+
+.search-button {
+    border-radius: 25px;
+    background-color: #add8e6;
+    padding: 15px;
+    width: 100px;
+    height: 50px;
+    display: grid;
+    transition: 0.75s;
+    margin: 10px;
+    color: white;
+}
+
+.search {
+    border-radius: 25px;
+    background-color: #add8e6;
     padding: 1px;
     width: 500px;
     height: 40px;
     display: grid;
     transition: 0.75s;
     margin: 10px;
-    
-    
-    }
-  .rndrecbutton {
-  
+}
+
+.rndrecbutton {
     border-radius: 25px;
-    background-color: #55067c;
+    background-color: #add8e6;
     padding: 15px;
-    width:100px;
+    width: 100px;
     height: 20px;
     display: grid;
     transition: 0.75s;
     display: fit-content;
     outline-style: solid;
-    outline-color:#490670;
-    
-    
-    
-    }
-    .rndrecbutton2 {
-  
-      border-radius: 25px;
-      background-color: #55067c;
-      padding: 15px;
-      width:100px;
-      height: 20px;
-      display: grid;
-      transition: 0.75s;
-      outline: solid;
-      margin: auto;
-      outline-color: blueviolet;
-      
-      
-      
-      }
-    .main {
+    outline-color: #490670;
+}
 
-      border-radius: 25px;
-      background-color: #fafafa33;
-      padding: 15px;
-      width:400px;
-      height: 500px;
-      display: grid;
-      outline-style: solid;
-      outline-color:#8a5302;
-      background-image: url(Assets/compasswallp.png);
+.rndrecbutton2 {
+    border-radius: 25px;
+    background-color: #add8e6;
+    padding: 15px;
+    width: 100px;
+    height: 20px;
+    display: grid;
+    transition: 0.75s;
+    outline: solid;
+    margin: auto;
+    outline-color: blueviolet;
+}
 
+.rndrecother {
+    border-radius: 25px;
+    background-color: #add8e6;
+    padding: 15px;
+    width: 100px;
+    height: 100px;
+    transition: 0.75s;
+    display: inline-block;
+    margin: 30px;
+}
 
-
-
-    }
-    .main2 {
-
-      border-radius: 25px;
-      background-color: #7c0606;
-      padding: 15px;
-      width:400px;
-      height: 250px;
-      display: grid;
-      outline-style: solid;
-      outline-color:#490670;
-
-
-
-    }
-
-    .rndrecother {
-        border-radius: 25px;
-    background-color: #55067c;
-        padding: 15px;
-        width: 100px;
-        height: 100px;
-        transition: 0.75s;
-        display: inline-block;
-        margin: 30px;
-      }
-  
-  .button {
+.button {
     border-radius: 25px;
     background-color: #3f065c;
     padding: 0px;
     width: 0px;
-    height:0px;
-    
-  }
-  .spacer {
-      width: 10px;
-      height: 50px;
-  
-  
-  }
-  body {
-    background-color: #0a000c;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    background-size: 120%;
+    height: 0px;
+}
 
-    
-    
+.rndrec:hover {
+    background-color: #add8e6;
+    transform: translate(3%, 3%);
+}
 
-  
-    
-  }
-  .rndrec:hover {
-    background-color: #31044b;
+.rndrecbutton:hover {
+    background-color: #add8e6;
     transform: translate(3%, 3%);
-  
-  
-  }
-  .rndrecbutton:hover {
-    background-color: #31044b;
+}
+
+.more:hover {
+    background-color: #add8e6;
     transform: translate(3%, 3%);
-  
-  
-  }
-  .more:hover {
-    background-color: #31044b;
-    transform: translate(3%, 3%);
-  
-  
-  }
+}
+
 .rndrecother:hover {
-  background-color: #31044b;
-  transform: translate(3%, 3%);
-
-
-  
+    background-color: #add8e6;
+    transform: translate(3%, 3%);
 }
+
 .rectangle:hover {
-  transform: translate(0%, 5%);
-
-
-  
+    transform: translate(0%, 5%);
 }
+
 .rndrecbutton2:hover {
-  background-color: #31044b;
-
-
-
+    background-color: #add8e6;
 }
-  
-  a:hover {
-    color: #878688;
-  
-  }
-  
-  
-  
-  
-  
-  h1 {text-align: center;}
-  h2 {text-align: center;}
-  div {text-align: center;}
-  p {text-align: center;}
-  a {text-align: center;}
-
-  
-  h1{
-    color: rgb(255, 255, 255);
-    font-family: Verdana;
-    font-size: 1000%;
-    text-shadow: 10px 10px black;
-  }
-  div{
-
-  border: 3px solid ();
-  padding: 10px;
-  color: rgb(255, 255, 255);
-  font-family: Verdana;
-  font-size: 100%;
-  width: fit-content;
-  height: fit-content;
-  
-  }
-  h2 {
-    color: rgb(255, 255, 255);
-    font-family: Verdana;
-    font-size: 300%;
-    text-shadow: 5px 5px black;
-  }
-  h3 {
-    color: rgb(255, 255, 255);
-    font-family: Verdana;
-    font-size: 200%;
-    text-shadow: 3px 3px black;
-  }
-  p {
-    color: rgb(255, 255, 255);
-    font-family: Verdana;
-
-  }
-  .navbar2 { margin:0; padding:0 }
-
-  .navbar2 {
-      display: inline-block;
-      width: 100%;
-      height: 50px;
-
-  }
-  
